Add style.css and something in index.html

--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
     <head>
         <title>This Is A New Local Repo.</title>
     </head>
+    <body>
+        <p>This Is Paragraph Of Local Repository.</p>
+    </body>
 </html>
